2005-12-15  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* Updated the documentation on IT++ and MKL setup for MSVC++.

2005-12-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/scalfunc.cpp, itpp/base/source.cpp,	itpp/base/timing.cpp: 
	minor cosmetic changes (math.h -> cmath; 3.1415 -> pi)
	* Makefile.am, itpp/Makefile.am: added missing filenames to
	EXTRA_DIST

2005-12-14  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* itpp.sln, itpp.vcproj, itpp/config_msvc.h: changes and additions
	for compability with Microsoft Visual C++ (MSVC) 

2005-12-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Created lists of source files in `sources.mk' files, which are
	included by `Makefile.am' files. This solves the problem of
	doubled dependency information in `doc/Makefile.am'
	* doc/local/documentation.doc: some minor fixes in the code
	examples
	* doc/local/itpp_header.html: added `tabs.css' stylesheet
	compatible with Doxygen 1.4.5

	* itpp.pc.in: fixed a typo in URL address
	* itpp/comm/error_counters.cpp: fixed incorrect order in BLERC
	constructor's initialisation list

2005-12-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itconfig.h: Doxygen modules moved from `alpha_modules.h'
	into this file
	* itpp/Makefile.am, doc/Makefile.am, doc/doxygen_html.cfg.in:
	minor updates in lists of `*.h' and `*.cpp' sources 

	* tests/filter_design_test.ref, tests/poly_test.ref: added missing
	reference files
	* tests/filter_design_test.cpp: not used `NO_LAPACK' and
	`NO_CBLAS' definitions replaced with `HAVE_LAPACK' and `HAVE_CBLAS'
	* doc/Makefile.am: updated with new files

2005-12-12  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/matfunc.h: added functions is_hermitian() and
	is_unitary() contributed by M. Szalay

2005-12-07  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/poly.{h,cpp}: new files added with support
	for polynomials. For now poly(), polyval(), and roots().